# openglmodel

./: CMakeLists.txt  README.md  build.bat  glad.c  linmath.h  main.cpp  main_2023.05.07.cpp
GLFW/lib/Debug/x64/: glfw3.lib
buildVS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters  openglmodel.sln  openglmodel.vcxproj  openglmodel.vcxproj.filters
buildVS/Debug/: glad.lib
buildVS/glad.dir/Debug/: glad.lib.recipe
buildVS/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glad.lastbuildstate
buildVS/openglmodel.dir/Debug/: openglmodel.exe.recipe
buildVS/openglmodel.dir/Debug/openglmodel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
buildVS/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildVS/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
buildVS/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
bullet3/LIB_MINGW/lib/: log.txt
bullet3/LIB_VS/lib/Debug/: LinearMath_Debug.lib
bullet3/src/LinearMath/: btSerializer.cpp
freetype/objs/x64/Debug/: freetype.dll.recipe  freetype.exp  freetype.ilk  freetype.lib  freetype.vcxproj.FileListAbsolute.txt  ftver.res
freetype/objs/x64/Debug/freetype.tlog/: CL.10992.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  freetype.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
glad/: glad.h
glew/lib/Debug/x64/: glew32d.exp  glew32d.lib  glew32sd.lib
lib-mingw-w64/: log.txt
soil/Debug/: soil.lib
soil/buildVS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  soil.vcxproj  soil.vcxproj.filters
soil/buildVS/Debug/: soil.lib
soil/buildVS/soil.dir/Debug/soil.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
soil/buildVS/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
soil/buildVS/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
soil/buildVS/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
soil/buildVS/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
